fix: updated links in profile page

--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -100,11 +100,7 @@ const translations = [
 				</A>
 			</span>
 			<span>
-				<A
-					href={"https://leetcode.com/u/DrInfinite/"}
-					title={`LeetCode - Naparajith T L`}
-					target="_blank"
-				>
+				<A href={"/quick-view/leetcode"} title={`LeetCode`} target="_blank">
 					LeetCode
 				</A>
 			</span>
