fix: profile page content

--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -119,7 +119,10 @@ const translations = [
 				</em>
 			</strong>
 		</p>
-
+		<p>
+			Here is my name translated into a few regional languages, just as a sign
+			of my respect for the immense diversity of this wonderful nation.
+		</p>
 		<table class="caption-top">
 			<caption class="mb-4 font-semibold italic">
 				Translations in select Indian languages
