--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -47,26 +47,15 @@ const translations = [
 		<p>
 			I am Naparajith, a Software Quality Engineer from India. I am passionate
 			about solving coding challenges, simple and complex everyday problems and
-			leveraging technology to better the lives of the people around me. My
-			career spans software development, engineering, quality assurance, test
+			leveraging technology to better the lives of the people around me.
+		</p>
+		<p>
+			My career spans software development, engineering, quality assurance, test
 			automation, and internal tool development.
 		</p>
-		<h3>More about me</h3>
 		<p>
-			Many people are curious about my name and what it means. So here is your
-			answer.
-		</p>
-		<p>
-			The name Naparajith is deeply rooted in ancient Indian culture and roughly
-			translates to <strong>
-				<em>
-					<u>a person who is undefeated.</u>
-				</em>
-			</strong>
-		</p>
-		<p>
-			I am sure that you might be interested in reading more about me. Here are
-			2 options, based on the purpose of your visit to this site:
+			If you are interested in learning more about my work, here are 2 options,
+			based on the purpose of your visit to this site:
 		</p>
 		<ul>
 			{
@@ -77,7 +66,6 @@ const translations = [
 				))
 			}
 		</ul>
-
 		<div
 			class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~rounded-none/xl ~p-2/4"
 		>
@@ -100,11 +88,7 @@ const translations = [
 				</A>
 			</span>
 			<span>
-				<A
-					href={"https://leetcode.com/u/DrInfinite/"}
-					title={`LeetCode - Naparajith T L`}
-					target="_blank"
-				>
+				<A href={"/quick-view/leetcode"} title={`LeetCode`} target="_blank">
 					LeetCode
 				</A>
 			</span>
@@ -122,7 +106,23 @@ const translations = [
 				<A href="/quotes-i-like" title="Portfolio - Quotes">Quotes</A>
 			</span>
 		</div>
-
+		<h3>More about me</h3>
+		<p>
+			Many people are curious about my name and what it means. So here is your
+			answer.
+		</p>
+		<p>
+			The name Naparajith is deeply rooted in ancient Indian culture and roughly
+			translates to <strong>
+				<em>
+					<u>a person who is undefeated.</u>
+				</em>
+			</strong>
+		</p>
+		<p>
+			Here is my name translated into a few regional languages, just as a sign
+			of my respect for the immense diversity of this wonderful nation.
+		</p>
 		<table class="caption-top">
 			<caption class="mb-4 font-semibold italic">
 				Translations in select Indian languages
