style: font updates
- changed font to monospace
- changed font base size to 14px

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,7 +74,7 @@
 
 @layer base {
 	body {
-		@apply prose prose-sm mx-auto scroll-smooth bg-background font-sans text-foreground antialiased ~px-4/0 md:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl selection:bg-primary selection:text-primary-foreground prose-a:font-semibold prose-blockquote:~text-base/3xl;
+		@apply prose prose-sm mx-auto scroll-smooth bg-background font-mono text-foreground antialiased ~px-4/0 md:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl selection:bg-primary selection:text-primary-foreground prose-a:font-semibold prose-blockquote:~text-base/3xl;
 	}
 
 	button {
@@ -106,7 +106,7 @@
 	}
 
 	blockquote {
-		@apply font-serif font-bold text-primary;
+		@apply font-bold text-primary;
 	}
 
 	cite {
