fix: profile page content

--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -54,8 +54,9 @@ const translations = [
 			automation, and internal tool development.
 		</p>
 		<p>
-			If you are interested in learning more about my work, here are 2 options,
-			based on the purpose of your visit to this site:
+			If you are interested in learning more about my work experience, my
+			skills, or the tools I use on a daily basis, you can pruse through the
+			pages below:
 		</p>
 		<ul>
 			{
