--- a/src/pages/quotes-i-like/all.astro
+++ b/src/pages/quotes-i-like/all.astro
@@ -32,7 +32,7 @@ quotes.sort((a, b) => a.data.author.localeCompare(b.data.author));
 	description="A collection of quotes that I really like."
 >
 	<p>
-		A collection of quotes from various people that I resonate with and want to
+		A collection of quotes by various people that I resonate with and wish to
 		share with a wider audience.
 	</p>
 	{
