fix: home page title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ const author = await getEntry(post.data.author);
 	title="Home"
 	description="The personal portfolio of T L Naparajith, a Software Engineer from India."
 >
-	<h1 class="text-center">Naparajith T L</h1>
+	<h1 class="text-center">Naparajith (Naps) T L</h1>
 	<article>
 		<figure
 			class="flex flex-col content-around items-center justify-around ~gap-6/12"
