fix: quotes page content

--- a/src/pages/quotes-i-like/index.astro
+++ b/src/pages/quotes-i-like/index.astro
@@ -38,10 +38,10 @@ const authors = [...new Set(quotes.map((quote) => quote.data.author))];
 			to share with a wider audience.
 		</p>
 		<p>
-			Check out all the quotes I like <A href="/quotes-i-like/all">here</A>.
+			A list of all the quotes I like <A href="/quotes-i-like/all">here</A>.
 		</p>
 		<div>
-			<p>Check out quotes by individual authors:</p>
+			<p>Here are a list of quotes by individual authors:</p>
 			{
 				authors.sort().map((author, index) => (
 					<ul>
