style: added smooth animations

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -73,6 +73,9 @@
 }
 
 @layer base {
+	* {
+		@apply transition transition-all;
+	}
 	body {
 		@apply prose prose-sm mx-auto scroll-smooth bg-background font-mono text-foreground antialiased ~px-4/0 md:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl selection:bg-primary selection:text-primary-foreground prose-a:font-semibold prose-blockquote:~text-base/3xl;
 	}
