--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,6 +21,7 @@
  */
 
 import A from "@/components/A.astro";
+import Button from "./Button.astro";
 ---
 
 <header
@@ -43,17 +44,12 @@ import A from "@/components/A.astro";
 		</div>
 
 		<span>
-			<button
-				class="rounded-full px-4"
+			<Button
 				onclick="window.open('https:\/\/flowcv.com/resume/mdrssqq018')"
 				title="Resume"
 			>
-				<span
-					class="bg-gradient-to-r from-[#d83333] to-[#f041ff] bg-clip-text text-transparent"
-				>
-					Resume
-				</span>
-			</button>
+				Resume
+			</Button>
 		</span>
 	</div>
 </header>
