--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -20,6 +20,7 @@
  * Contact me through electronic mail: <naparajith@duck.com>
  */
 
+import Button from "@/components/Button.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
@@ -32,16 +33,8 @@ import Layout from "@/layouts/Layout.astro";
 			Try reloading the page or better, go back to start navigating again. Sorry
 			for any inconviences caused!
 		</p>
-
-		<button
-			class="mx-auto place-self-center rounded-full px-4"
-			onclick="history.back()"
-		>
-			<span
-				class="bg-gradient-to-br from-[#d83333] to-[#f041ff] bg-clip-text text-transparent"
-			>
-				Go Back
-			</span>
-		</button>
+		<Button className={"mx-auto place-self-center"} onclick="history.back()">
+			Go Back
+		</Button>
 	</div>
 </Layout>
