fix: updated policy page

--- a/src/pages/policy/[slug].astro
+++ b/src/pages/policy/[slug].astro
@@ -39,8 +39,10 @@ const { Content } = await render(policy);
 <Layout title={policy.data.title} description={policy.data.description}>
 	<h1>{policy.data.title}</h1>
 	<div class="-mb-4 flex flex-row flex-wrap justify-between">
-		<p>Created: <strong>{policy.data.created.toDateString()}</strong></p>
-		<p>Updated: <strong>{policy.data.updated?.toDateString()}</strong></p>
+		<p>Published on <strong>{policy.data.created.toDateString()}</strong></p>
+		<p>
+			Last updated on <strong>{policy.data.updated?.toDateString()}</strong>
+		</p>
 	</div>
 	<Content />
 </Layout>
