--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -89,9 +89,13 @@ const author = await getEntry(post.data.author);
 	<div
 		class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~rounded-none/xl ~p-2/4"
 	>
-		<A href="/profile" title="Bio">Profile</A>
+		<A href="/profile" title="Profile">Profile</A>
 		<A href="/quick-view" title="Quick View"> Quick View </A>
-		<A href={"https://flowcv.com/resume/mdrssqq018"} target={"_blank"}>
+		<A
+			href={"https://flowcv.com/resume/mdrssqq018"}
+			target={"_blank"}
+			title="Resume"
+		>
 			Resume
 		</A>
 		<A href="/blog" title="Blog">Blog</A>
