--- a/src/components/A.astro
+++ b/src/components/A.astro
@@ -37,6 +37,6 @@ const { href, title, target, css } = Astro.props;
 		<slot />
 	</span>
 	<span
-		class="absolute inset-x-0 bottom-0 h-[1px] bg-gradient-to-r from-[#d83333] to-[#f041ff] group-hover:h-full md:h-[2px]"
+		class="absolute inset-x-0 bottom-0 h-[1px] bg-gradient-to-r from-[#d83333] to-[#f041ff] group-hover:h-full group-active:from-[#f041ff] group-active:to-[#d83333] md:h-[2px]"
 	></span>
 </a>
