feat: new policy structure
- added new policy index page
- separate policy pages for site content, JS and AI
- updated home page to redirect to appropriate pages

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -100,16 +100,13 @@ const author = await getEntry(post.data.author);
 		</A>
 		<A href="/blog" title="Blog">Blog</A>
 		<A href="/quotes-i-like" title="Quotes">Quotes</A>
-		<A href="/policy/privacy-policy" title="Privacy Policy">Privacy Policy</A>
+		<A href="/policy" title="Site Policies">Site Policies</A>
 	</div>
 	<main>
 		<p>
-			This is a portfolio website. The content and views present here are purely
-			meant to showcase my work, skills and abilities. They are my own and do
-			not reflect the views and positions any organisation or entity I work with
-			or have previously worked with. The source code for this site is remotely
-			hosted as a repository on GitHub. The site is deployed, hosted and
-			distributed using Vercel.
+			To know more about site wide policies, please visit <A href={"/policy"}>
+				Policy
+			</A>.
 		</p>
 		<div class="~space-y-4/8">
 			<hr class="my-4 border-t-2 border-t-border" />
