chore: renamed quotes-i-like to quotes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -93,7 +93,7 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 		<A href="/profile" title="Profile">Profile</A>
 		<A href="/quick-view" title="Quick View"> Quick View </A>
 		<A href="/blog" title="Blog">Blog</A>
-		<A href="/quotes-i-like" title="Quotes">Quotes</A>
+		<A href="/quotes" title="Quotes">Quotes</A>
 		<A
 			href={"https://github.com/DrInfinite"}
 			title={`GitHub - DrInfinite`}
@@ -155,7 +155,7 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 					</cite>
 				</figcaption>
 				<div class="float-end">
-					<A href="/quotes-i-like" title="Quotes">more like this</A>
+					<A href="/quotes" title="Quotes">more like this</A>
 				</div>
 			</figure>
 			<!-- <h2>A random blog post</h2> -->
