--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -104,7 +104,7 @@ const translations = [
 			</span>
 			<span><A href="/blog" title="Blog">Blog</A></span>
 			<span>
-				<A href="/quotes-i-like" title="Portfolio - Quotes">Quotes</A>
+				<A href="/quotes" title="Portfolio - Quotes">Quotes</A>
 			</span>
 		</div>
 		<h3>More about me</h3>
