--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,7 +30,7 @@ import Button from "./Button.astro";
 	<h3 class="text-start">
 		~/{
 			Astro.url.pathname.startsWith("/blog") ||
-			Astro.url.pathname.startsWith("/quotes-i-like")
+			Astro.url.pathname.startsWith("/quotes")
 				? Astro.url.pathname.toString().replace("/", "").replace(/\/.*/, "")
 				: Astro.url.pathname.toString().replace("/", "")
 		}<span class="animate-pulse">&#x25AE</span>
