fix: minor content updates

--- a/src/pages/quotes/index.astro
+++ b/src/pages/quotes/index.astro
@@ -34,8 +34,8 @@ const authors = [...new Set(quotes.map((quote) => quote.data.author))];
 >
 	<main class="min-h-[60vh]">
 		<p>
-			A collection of quotes from various people that I resonate with and want
-			to share with a wider audience.
+			A collection of quotes by various people that I resonate with and want to
+			share with a wider audience.
 		</p>
 		<A href="/quotes-i-like/all">A list of all the quotes that I really like</A>
 		<div>
