--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -117,7 +117,7 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 		</A>
 	</div>
 	<main>
-		<p>
+		<p class="text-center">
 			<A
 				href="https://flowcv.com/resume/mdrssqq018"
 				title="Resume"
@@ -125,14 +125,6 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 			>
 				Download the latest copy of my Resume.
 			</A>
-		</p>
-		<p>
-			To know more about site wide policies, please visit <A
-				href={"/policy"}
-				title="Site Policies"
-			>
-				Policy
-			</A>.
 		</p>
 		<div class="~space-y-4/8">
 			<hr class="my-4 border-t-2 border-t-border" />
