fix: quotes url endpoints

--- a/src/pages/quotes/index.astro
+++ b/src/pages/quotes/index.astro
@@ -37,14 +37,14 @@ const authors = [...new Set(quotes.map((quote) => quote.data.author))];
 			A collection of quotes by various people that I resonate with and want to
 			share with a wider audience.
 		</p>
-		<A href="/quotes-i-like/all">A list of all the quotes that I really like</A>
+		<A href="/quotes/all">A list of all the quotes that I like</A>
 		<div>
 			<p>Here is the list ordered by individual authors:</p>
 			<!-- <ul> -->
 			<!-- 	{ -->
 			<!-- 		authors.sort().map((author, _) => ( -->
 			<!-- 			<li> -->
-			<!-- 				<A href={`/quotes-i-like/${author}`}>{author}</A> -->
+			<!-- 				<A href={`/quotes/${author}`}>{author}</A> -->
 			<!-- 			</li> -->
 			<!-- 		)) -->
 			<!-- 	} -->
