style: centered text

--- a/src/pages/quotes/index.astro
+++ b/src/pages/quotes/index.astro
@@ -37,7 +37,9 @@ const authors = [...new Set(quotes.map((quote) => quote.data.author))];
 			A collection of quotes by various people that I resonate with and want to
 			share with a wider audience.
 		</p>
-		<A href="/quotes/all">A list of all the quotes that I like</A>
+		<p class="text-center">
+			<A href="/quotes/all">A list of all the quotes that I like</A>
+		</p>
 		<div>
 			<p>Here is the list ordered by individual authors:</p>
 			<!-- <ul> -->
