--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -49,8 +49,9 @@ import Button from "./Button.astro";
 
 		<span>
 			<Button
-				onclick="window.open('https:\/\/flowcv.com/resume/mdrssqq018')"
+				href="https://flowcv.com/resume/mdrssqq018"
 				title="Resume"
+				target="_blank"
 			>
 				Resume
 			</Button>
