--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -33,11 +33,11 @@ import Layout from "@/layouts/Layout.astro";
 			404 | The Page you are looking for has moved or doesn't exist ;(
 		</h3>
 		<p class="text-justify">
-			Try looking for another page or better, go back to start navigating again.
-			Sorry for any inconviences caused!
+			Try looking for another page or, go home to start over. Sorry for any
+			inconviences caused!
 		</p>
-		<Button className={"mx-auto place-self-center"} onclick="history.back()">
-			Go Back
+		<Button className={"mx-auto place-self-center"} href={"/"}>
+			Go Home
 		</Button>
 	</div>
 </Layout>
