--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -30,11 +30,11 @@ import Layout from "@/layouts/Layout.astro";
 			500 | The Server randomly decided to stop working ;(
 		</h3>
 		<p class="text-justify">
-			Try reloading the page or better, go back to start navigating again. Sorry
-			for any inconviences caused!
+			Try reloading the page or, go home to start over. Sorry for any
+			inconviences caused!
 		</p>
-		<Button className={"mx-auto place-self-center"} onclick="history.back()">
-			Go Back
+		<Button className={"mx-auto place-self-center"} href={"/"}>
+			Go Home
 		</Button>
 	</div>
 </Layout>
